# shrewkv

./: .gitignore  Cargo.toml  Readme.md  architecture.tldr
scripts/: test_concurrency.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
src/client/: mod.rs
src/core/: mod.rs
src/server/: mod.rs
src/utils/: mod.rs
