[package]
name = "shrewdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
ntex = { version = "1.0", features = ["tokio"] }
once_cell = "1.19.0"
colored = "2"
